--- a/index.html
+++ b/index.html
@@ -93,29 +93,47 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>        
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>        
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('pictures/csipofajdalom.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>Csipő</h2>
-            <p class="slideshow-p"> A csipőhöz a legfontosabb kiemelendő rész.</p>
+            <p class="slideshow-p"> Innovatív eljárással a kórházban töltött idő felére csökken</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/terd-szorit.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>Térd</h2>
-            <p class="slideshow-p">A térdhez a legfontosabb kiemelendő rész.</p>
+            <p class="slideshow-p">Minimál invazív technológiával a műtéti fájdalom minimális.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>Váll</h2>
-            <p class="slideshow-p">A vállhoz a legfontosabb kiemelendő rész.</p>
+            <p class="slideshow-p">Okos-eszközökkel a műtét sikeressége 95 %-ra tervezhető</p>
           </div>
         </div>
+        <!-- Slide Four - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Váll</h2>
+            <p class="slideshow-p">Nincs izomátvágás - akár két hét után visszatérhet munkájához</p>
+          </div>
+        </div>
+        <!-- Slide Five - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Váll</h2>
+            <p class="slideshow-p">Egyénre szabott protézisek - a hosszú távú eredményességért</p>
+          </div>
+        </div>
+
+
       </div>        
 
       </div>
@@ -135,7 +153,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Magamról...</h1>
+    <h1 class="mt-4 mb-3">Bemutatkozás</h1>
 
     <!-- Intro Content -->
     <div class="row">
@@ -145,27 +163,33 @@
         </a></p>  
       </div>
       <div class="col-lg-6">
-        <h2>Bemutatkozás</h2>
-        <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok, kiemelt területemen a <strong>térd, csípő és vállsebészet</strong> szakértőjeként.</p>
-        <p>Fontosnak tartom az új technológiák, innovációk bevezetését és alkalmazását szakterületemen, mellyel <strong>célom, hogy megkönnyítsem a betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong> A szekszárdi kórház ortopédiai osztályának, <strong>részlegvezető főorvosaként</strong> elsőként végeztünk arthroscopos elülső anatómiai keresztszalag pótlást, vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. 2019. novemberétől pedig térdprotézis beütetéseket is végzünk.  </p>
-        <p>Olyan számítógépes tervezőprogram segítségével, <strong>mellyel jobb eredményt és hosszabb protézis élettartamot tudunk elérni.</strong> </p>
+        
+        <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong> szakértőjeként.</p>
+        <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
+           Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
+           végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong>
+           A szekszárdi Kórház <strong>ortopédiai osztályának, részlegvezető főorvosaként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
+           vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót valamint térdprotézis beültetést. Olyan számítógépes tervezőprogram segítségével, 
+           mellyel <strong>jobb eredményt és hosszabb protézis élettartamot lehet elérni. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
        </div>
       <div class="col-lg-12">
-        <p><strong>A korábbi 80 %-os műtéti eredményességet így 95%-ra tudjuk tervezni.</strong> Térd és csípő protézis beültetést <strong>minimál invazív technikával</strong> végzünk. Így a <strong>kórházban töltött idő jelentősen lerövidül</strong>, betegeink gyorsabb rehabilitációs időre számíthatnak, <strong>jóval korábban térhetnek vissza munkájukhoz.</strong> </p>
+        <p><strong></strong> </p>
       </div>
     </div>
 
     <!-- /.row -->
-    <!-- Team Members -->
+    <!-- Szakterületek -->
     <h2>Szakterületek</h2>
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <img class="card-img-top" src="pictures/rontgencsipo-300.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Csipő</h4>
+            <h4 class="card-title">Minimál invazív csípőprotézis technológia</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <p class="card-text">Izomátvágás nélkül, gyorsabb gyógyulás, rövidebb rehabilitációs idő.
+               A beteg akár két hét múlva visszatérhet munkájához.              
+               A kórházban töltött idő felére csökken.</p>
           </div>
 
         </div>
@@ -174,9 +198,10 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="pictures/rontgenterd-300.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Térd</h4>
+            <h4 class="card-title">Térdprotézis egyénre szabva</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <p class="card-text">Okos-eszközök segítségével megtervezzük a mozgásanalízisre épülő teljesen egyedi térdprotézis beültetést.
+               A fájdalommentes, hosszú élettartam érdekében</p>
           </div>
 
         </div>
@@ -185,24 +210,24 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="pictures/rontgenvall-300.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Váll</h4>
+            <h4 class="card-title">Arthroscopos vállsebészet</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <p class="card-text">Speciális vállpanaszokat is ellátunk. Innovatív eszközöket használunk. Műtéteink többsége 1 napos sebészeti beavatkozás.</p>
           </div>
 
         </div>
       </div>
     </div>
-    <!-- /.row -->
+    <!-- /Szakterületek -->
   
     <div class="row">
       <div class="col-lg-12">
-        <h2>Magánrendeléseim</h2>
+        <h2 class="kozepre">Magánrendeléseim</h2>
       </div>
       <div class="col-lg-4">
               <h3 class="open-hours">Szekszárd </h3>
-              <p>Subrosa Egészség Centrum, Szekszárd, Kadarka u. 72<br>
-                2020. október 1-jétől <br>
+              <p>Subrosa Egészség Centrum, Szekszárd, Kadarka u. 72 
+                (2020. október 1-jétől) <br>
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
               </p>
@@ -221,8 +246,12 @@
           </p>        
       </div>
       <div class="col-lg-12">
-        <h2>Közfinanszírozott rendelések</h2>
-        <p>Tolna megyei Balassa János Kórházban van pénteki napokon délelőtt. Kórházi időpontkérés telefonon a: 74/501-500/181 melléken.</p>
+        <p>
+          Fenti magánrendeléseimre időpont egyeztetés/bejelentkezés a: <a href="tel:+36303312262">+ 36 30/331-2262-os</a> telefonszámon vagy e-mailben: <a href="mailto:ganczerp@me.com">ganczerp@me.com</a> lehetséges.</p>
+      </div>
+      <div class="col-lg-12">
+        <h2 class="kozepre" "well"> Közfinanszírozott rendelések</h2>
+        <p>Tolna megyei Balassa János Kórházban van pénteki napokon délelőtt. Kórházi időpontkérés telefonon a: <a href="tel:+3674501500">74/501-500/181</a> melléken.</p>
       </div>
     </div>
     <!-- /.row -->
