--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
-              <a class="dropdown-item" href="izomvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
+              <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
           </li>
@@ -159,7 +159,7 @@
     <div class="row">
       <div class="col-lg-6">
         <p><a href="bemutatkozas.html">
-          <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
+          <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
         </a></p>  
       </div>
       <div class="col-lg-6">
@@ -183,7 +183,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/rontgencsipo-300.jpg" alt="">
+          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgencsipo-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Minimál invazív csípőprotézis technológia</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -196,7 +196,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/rontgenterd-300.jpg" alt="">
+          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenterd-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Térdprotézis egyénre szabva</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -208,7 +208,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/rontgenvall-300.jpg" alt="">
+          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenvall-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Arthroscopos vállsebészet</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -222,11 +222,11 @@
   
     <div class="row">
       <div class="col-lg-12">
-        <h2 class="kozepre">Magánrendeléseim</h2>
+        <h2 class="kozepre separator">Magánrendeléseim</h2>
       </div>
       <div class="col-lg-4">
               <h3 class="open-hours">Szekszárd </h3>
-              <p>Subrosa Egészség Centrum, Szekszárd, Kadarka u. 72 
+              <p>Sub Rosa Egészségközpont, Szekszárd, Kadarka u. 72 
                 (2020. október 1-jétől) <br>
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
@@ -250,7 +250,7 @@
           Fenti magánrendeléseimre időpont egyeztetés/bejelentkezés a: <a href="tel:+36303312262">+ 36 30/331-2262-os</a> telefonszámon vagy e-mailben: <a href="mailto:ganczerp@me.com">ganczerp@me.com</a> lehetséges.</p>
       </div>
       <div class="col-lg-12">
-        <h2 class="kozepre" "well"> Közfinanszírozott rendelések</h2>
+        <h2 class="kozepre separator"> Közfinanszírozott rendelések</h2>
         <p>Tolna megyei Balassa János Kórházban van pénteki napokon délelőtt. Kórházi időpontkérés telefonon a: <a href="tel:+3674501500">74/501-500/181</a> melléken.</p>
       </div>
     </div>
