--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -50,7 +50,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
-              <a class="dropdown-item" href="izomvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
+              <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
           </li>
