--- a/navigation.html
+++ b/navigation.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html lang="hu">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+   <!-- Navigation -->
+   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     
     <div class="container">
       <a class="navbar-brand" href="index.html">Dr. Ganczer Péter <br> <p class="pozicio"> Ortopéd sebész </p></a>
@@ -37,7 +11,12 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Kezdőlap</a>
           </li>
-
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Csipő
@@ -81,53 +60,8 @@
             <a class="nav-link" href="kapcsolat.html">Kapcsolat</a>
           </li>               
 
+
         </ul>
       </div>
     </div>
   </nav>
-
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">404
-      <small>A keresett oldal nem található...</small>
-    </h1>
-
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item active">404</li>
-    </ol>
-
-    <div class="jumbotron">
-      <h1 class="display-1">404</h1>
-      <p>Kérem jelezze a problémát a info@drganczer email címen! Köszönöm!</p>
-      <ul>
-        <li>
-          <a href="index.html">Home</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /.jumbotron -->
-
-  </div>
-  <!-- /.container -->
-
-  <!-- /.container -->
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Dr. Ganczer Péter (2020) Powered by Bootstrap</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
-</html>
