--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -123,12 +123,13 @@
           </ul>
         <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás esetén, ha a fent említettek nem hoznak javulást, akkor csípő protézis beültetése javasolt.</p>
     </div>
-    <div class="col-lg-6">
+
+    <div class="col-lg-6 img-thumbnail">
       <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
-          <p><strong>Szekszárd</strong>, Kadarka u. 72 <br>
+          <p><strong>Szekszárd</strong>, Kadarka u. 72. <br>
             2020. október 1-jétől <br>
             minden páros héten hétfőn  16.00–20.00 óráig <br>
             minden pénteken 13.00–17.00 óráig</p>
