--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Bemutatkozás</h1>
+    <h1 class="mt-4 mb-3"> </h1>
 
     <!-- Intro Content -->
     <div class="row">
@@ -164,7 +164,7 @@
       </div>
       <div class="col-lg-6">
         
-        <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong> szakértőjeként.</p>
+        <p><a href="bemutatkozas.html">Dr. Ganczer Péter</a> ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong>.</p>
         <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
            Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
            végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong>
@@ -183,7 +183,9 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgencsipo-300.jpg" alt="">
+          <p><a href="izomatvagas-nelkul.html">
+            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgencsipo-300.jpg" alt="">
+          </a></p>   
           <div class="card-body">
             <h4 class="card-title">Minimál invazív csípőprotézis technológia</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -222,11 +224,12 @@
   
     <div class="row">
       <div class="col-lg-12">
-        <h2 class="kozepre separator">Magánrendeléseim</h2>
+        <h2 class="kozepre separator">Magánrendelések</h2>
       </div>
       <div class="col-lg-4">
               <h3 class="open-hours">Szekszárd </h3>
-              <p>Sub Rosa Egészségközpont, Szekszárd, Kadarka u. 72 
+              <p>Sub Rosa Egészségközpont,<br> 
+                Szekszárd, Kadarka u. 72.<br>
                 (2020. október 1-jétől) <br>
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
