--- a/terdfajdalomrol.html
+++ b/terdfajdalomrol.html
@@ -118,12 +118,13 @@
         <li>íngyulladás: A térdízületen tapadó izmok inainak gyulladása miatt is jelentkezhet térdfájdalom. Kerékpározás, futás vagy síelés következtében, az intenzív terhelés hatására kialakuló íngyulladás esetén beszélünk, ún. „futótérdről”. Ez az elváltozás igen nagy fájdalommal, esetenként ízületi duzzanattal jár. Fontos a fizikai kímélet, gyulladáscsökkentő kezelése</li>
       </ul>
     </div>
-    <div class="col-lg-6">
+    
+    <div class="col-lg-6 img-thumbnail">
       <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-terd.jpg" alt="Csipőfájdalomról">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
-          <p><strong>Szekszárd</strong>, Kadarka u. 72 <br>
+          <p><strong>Szekszárd</strong>, Kadarka u. 72. <br>
             2020. október 1-jétől <br>
             minden páros héten hétfőn  16.00–20.00 óráig <br>
             minden pénteken 13.00–17.00 óráig</p>
