--- a/izomatvagas-nelkul.html
+++ b/izomatvagas-nelkul.html
@@ -133,7 +133,7 @@
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
-          <p><strong>Szekszárd</strong>, Kadarka u. 72 <br>
+          <p><strong>Szekszárd</strong>, Kadarka u. 72. <br>
             2020. október 1-jétől <br>
             minden páros héten hétfőn  16.00–20.00 óráig <br>
             minden pénteken 13.00–17.00 óráig</p>
