--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenterd-300.jpg" alt="">
+          <p><a href="terd-protezis-beultetes.html">
+            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenterd-300.jpg" alt="">
+          </a></p>   
           <div class="card-body">
             <h4 class="card-title">Térdprotézis egyénre szabva</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -210,7 +212,9 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenvall-300.jpg" alt="">
+          <p><a href="arthroscopos-vallsebeszet.html"> 
+            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenvall-300.jpg" alt="">
+          </a></p>    
           <div class="card-body">
             <h4 class="card-title">Arthroscopos vállsebészet</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
