--- a/arak.html
+++ b/arak.html
@@ -64,7 +64,7 @@
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
               <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
-              <a class="dropdown-item" href="terd-porcsebészet.html">Térd porcsebészet</a>              
+              <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>               
             </div>
           </li>
         
@@ -198,7 +198,26 @@
         </div>
       </div>      
 
+      <!-- Elválasztó sáv-->
+      <div class="row separator">     
+        <p> </p>
+      </div>
+      <!-- /.Elválasztó sáv -->  
 
+      <div class="row img-thumbnail">
+        <div class="col-lg-8 mb-4">
+          <p><strong>COVID 19 tájékoztató<br> </strong>
+            Magánrendelésem a koronavírus-járvány ideje alatt is zavartalanul üzemel. Minden esetben
+            telefonon előre egyeztetett időpontban dolgozunk.
+            Bejelentkezés a: +36 30/331-2262-es telefonszámon lehetséges.
+            Rendelőnkben fokozottan figyelünk a higiéniára. A szájmaszk használata minden rendelésünkön
+            kötelező. Minden egyes betegünk után és vizsgálat előtt felület-fertőtlenítést végzünk.
+          </p>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <img class="card-img-top" src="pictures/cdc-k0KRNtqcjfw-unsplash.jpg" alt="Covid 19">
+        </div>
+      </div>      
     </div>
     <!-- /.container -->
 
