--- a/arthroscopos-vallsebeszet.html
+++ b/arthroscopos-vallsebeszet.html
@@ -97,7 +97,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Térdfájdalom
+    <h1 class="mt-4 mb-3">Arthroscopos vállsebészet (labrum refixatio)
       <small></small>
     </h1>
   </div>    
@@ -109,18 +109,25 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <p>Ízületi kopás (porckopás, ostheoarthritis)</p>        
-      <p>A térdfájás, térdfájdalom gyakran jelentkező ízületi panasz, mely bármely életkorban előfordulhat. Fiatalok esetében legtöbbször túlerőltetés, sportolás következtében kialakuló nyáktömlő-gyulladás, illetve sérülés. Idősebb életkorban pedig porckopás következményeként jelentkezhet a térdízület fájdalma.  </p>
-      <h3>A térdfájdalom kialakulásának okai lehetnek:</h3>
+      <p>Vállsebészetünk a váll fájdalmaival, betegségeivel, vagy annak elváltozásaival foglalkozik. Betegeink sok esetben 
+         veleszületett vagy szerzett rendellenességekkel keresnek fel bennünket.  A vállat alkotó három ízület együttes, 
+         összehangolt mozgása adja az egészséges működést, ha itt bármilyen elakadás történik, jelentős fájdalommal jár. 
+         Mindenképpen érdemes felkeresni vele a szakorvost.</p>
+      <h3>Milyen műtéteket végzünk?</h3>
       <ul>
-        <li>porckopás (arthrosis, ostheoarthritis): főként 40 év felett jelentkezik, mivel hosszabb távon, lassan alakul ki. Jellemzően, akik fiatalkorban versenyszerűen sportoltak, illetve térdsérülést szenvedtek el, akik túlsúlyosak vagy térdük alaki eltérést mutat (O-láb, X-láb), különösen hajlamosak osteoarthritis kialakulására. Lényege, hogy az íz felszínét borító porcok erőteljes kopása, elvékonyodása következtében, az ízület mozgatásakor az ízületi felszínek egymással dörzsölődnek, ami térdropogással és igen erőteljes fájdalommal jár. A folyamat lassítható speciális porcépítő készítmények szedésével, előrehaladott esetben a térdízületbe adott injekciók, műtét a megoldás</li>
-        <li>nyáktömlő-gyulladás (bursitis): a térdízületben lévő nyáktömlő a csontokat fedi, az ízületet párnázza ki. A bursitis ennek a tömlőnek gyulladását jelenti. A térdfájdalmak egyik gyakori oka, főleg fiatalabb korban. Hátterében több ok is állhat, a nagyobb sérülés és a fertőző megbetegedés mellett mikro sérülések (hosszan tartó terhelés, vagy térdelés) is előidézhetik</li>
-        <li>íngyulladás: A térdízületen tapadó izmok inainak gyulladása miatt is jelentkezhet térdfájdalom. Kerékpározás, futás vagy síelés következtében, az intenzív terhelés hatására kialakuló íngyulladás esetén beszélünk, ún. „futótérdről”. Ez az elváltozás igen nagy fájdalommal, esetenként ízületi duzzanattal jár. Fontos a fizikai kímélet, gyulladáscsökkentő kezelése</li>
+        <li>nyitott vállműtét</li>
+        <li>vállízületi ficam illetve porcsérülés miatti stabilizációs műtét</li>
+        <li>vállízületi porcos gyűrűtárcsa sérülés miatti stabilizációs műtét</li>
+        <li>rotátorköpeny varratműtét</li>
+        <li>rotátorköpeny szakadás></li>        
       </ul>
+      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk és megtervezzük műtéteinket. Így a beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra tudjuk tervezni.  </p>
+      <p>Amennyiben műtétet javasolunk, úgy az operációkat arthroscopos és minimál invazív eljárással végezzük el. Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük. A minimál invazív feltárásnak köszönhetően a szervezetet alig terhelve, végezzük el a beavatkozást, meggyorsítva ezzel a gyógyulás idejét. </p>
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vall-artoscope.jpg" alt="Arthroscopos vállsebészet ">
     </div>
     
     <div class="col-lg-6 img-thumbnail">
-      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-terd.jpg" alt="Csipőfájdalomról">
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgenvall-500.jpg" alt="Vállfájdalomról" sizes="80%">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
