--- a/vallfajdalomrol.html
+++ b/vallfajdalomrol.html
@@ -97,7 +97,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Térdfájdalom
+    <h1 class="mt-4 mb-3">Vállfájdalom
       <small></small>
     </h1>
   </div>    
@@ -109,18 +109,24 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <p>Ízületi kopás (porckopás, ostheoarthritis)</p>        
-      <p>A térdfájás, térdfájdalom gyakran jelentkező ízületi panasz, mely bármely életkorban előfordulhat. Fiatalok esetében legtöbbször túlerőltetés, sportolás következtében kialakuló nyáktömlő-gyulladás, illetve sérülés. Idősebb életkorban pedig porckopás következményeként jelentkezhet a térdízület fájdalma.  </p>
-      <h3>A térdfájdalom kialakulásának okai lehetnek:</h3>
+      <h3>Leggyakoribb okai:</h3>
       <ul>
-        <li>porckopás (arthrosis, ostheoarthritis): főként 40 év felett jelentkezik, mivel hosszabb távon, lassan alakul ki. Jellemzően, akik fiatalkorban versenyszerűen sportoltak, illetve térdsérülést szenvedtek el, akik túlsúlyosak vagy térdük alaki eltérést mutat (O-láb, X-láb), különösen hajlamosak osteoarthritis kialakulására. Lényege, hogy az íz felszínét borító porcok erőteljes kopása, elvékonyodása következtében, az ízület mozgatásakor az ízületi felszínek egymással dörzsölődnek, ami térdropogással és igen erőteljes fájdalommal jár. A folyamat lassítható speciális porcépítő készítmények szedésével, előrehaladott esetben a térdízületbe adott injekciók, műtét a megoldás</li>
-        <li>nyáktömlő-gyulladás (bursitis): a térdízületben lévő nyáktömlő a csontokat fedi, az ízületet párnázza ki. A bursitis ennek a tömlőnek gyulladását jelenti. A térdfájdalmak egyik gyakori oka, főleg fiatalabb korban. Hátterében több ok is állhat, a nagyobb sérülés és a fertőző megbetegedés mellett mikro sérülések (hosszan tartó terhelés, vagy térdelés) is előidézhetik</li>
-        <li>íngyulladás: A térdízületen tapadó izmok inainak gyulladása miatt is jelentkezhet térdfájdalom. Kerékpározás, futás vagy síelés következtében, az intenzív terhelés hatására kialakuló íngyulladás esetén beszélünk, ún. „futótérdről”. Ez az elváltozás igen nagy fájdalommal, esetenként ízületi duzzanattal jár. Fontos a fizikai kímélet, gyulladáscsökkentő kezelése</li>
+        <li>a nyáktömlőgyulladás (bursitis)</li>
+        <li>íngyulladás (tendinitis)</li>
+        <li>az ínszakadás</li>
+        <li>törés</li>
+        <li>arthritis (sokízületi gyulladás)</li>        
       </ul>
+      <p>A vállfájdalmak okai lehetnek a helyben kialakult elváltozások vagy egyéb területről kisugárzó fájdalmak. Kisugárzó fájdalmat okozhat a nyaki gerinc kopásos elváltozása. Ekkor a fájdalom a fej mozgatásakor erősödik. </p>
+      <p>Életkortól függően, 20-35 éves kor közötti sportolóknál, az elakadási szindrómák fordulnak elő gyakrabban. A 40-55 év közöttieknél már az ízületek körül kialakulhatnak meszesedések, ezek okozzák a problémát. Az 55 év feletti korosztályra az izomszakadás a jellemző, mely erős vállfájdalommal.</p>
+      <p>A hirtelen jelentkező vállfájdalmak többsége<strong> gyulladáscsökkentőkkel rendbe hozható (krémek, tapaszok)</strong>, de kezeléséhez általában elengedhetetlen a gyógytorna is. 
+        Az enyhébb fájdalmakra elég lehet, de ha ezek pár hét alatt nem hoznak javulást, mindenképpen orvoshoz kell fordulni. 
+        </p>
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vallfajdalom.jpg" alt="Vállfájdalom">
     </div>
     
     <div class="col-lg-6 img-thumbnail">
-      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-terd.jpg" alt="Csipőfájdalomról">
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgenvall-500.jpg" alt="Vállfájdalomról" sizes="80%">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
