--- a/arthroscopos-rotator-kopeny.html
+++ b/arthroscopos-rotator-kopeny.html
@@ -97,7 +97,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Térdfájdalom
+    <h1 class="mt-4 mb-3">Arthroscopos rotátor köpeny varratműtét
       <small></small>
     </h1>
   </div>    
@@ -109,18 +109,22 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <p>Ízületi kopás (porckopás, ostheoarthritis)</p>        
-      <p>A térdfájás, térdfájdalom gyakran jelentkező ízületi panasz, mely bármely életkorban előfordulhat. Fiatalok esetében legtöbbször túlerőltetés, sportolás következtében kialakuló nyáktömlő-gyulladás, illetve sérülés. Idősebb életkorban pedig porckopás következményeként jelentkezhet a térdízület fájdalma.  </p>
-      <h3>A térdfájdalom kialakulásának okai lehetnek:</h3>
-      <ul>
-        <li>porckopás (arthrosis, ostheoarthritis): főként 40 év felett jelentkezik, mivel hosszabb távon, lassan alakul ki. Jellemzően, akik fiatalkorban versenyszerűen sportoltak, illetve térdsérülést szenvedtek el, akik túlsúlyosak vagy térdük alaki eltérést mutat (O-láb, X-láb), különösen hajlamosak osteoarthritis kialakulására. Lényege, hogy az íz felszínét borító porcok erőteljes kopása, elvékonyodása következtében, az ízület mozgatásakor az ízületi felszínek egymással dörzsölődnek, ami térdropogással és igen erőteljes fájdalommal jár. A folyamat lassítható speciális porcépítő készítmények szedésével, előrehaladott esetben a térdízületbe adott injekciók, műtét a megoldás</li>
-        <li>nyáktömlő-gyulladás (bursitis): a térdízületben lévő nyáktömlő a csontokat fedi, az ízületet párnázza ki. A bursitis ennek a tömlőnek gyulladását jelenti. A térdfájdalmak egyik gyakori oka, főleg fiatalabb korban. Hátterében több ok is állhat, a nagyobb sérülés és a fertőző megbetegedés mellett mikro sérülések (hosszan tartó terhelés, vagy térdelés) is előidézhetik</li>
-        <li>íngyulladás: A térdízületen tapadó izmok inainak gyulladása miatt is jelentkezhet térdfájdalom. Kerékpározás, futás vagy síelés következtében, az intenzív terhelés hatására kialakuló íngyulladás esetén beszélünk, ún. „futótérdről”. Ez az elváltozás igen nagy fájdalommal, esetenként ízületi duzzanattal jár. Fontos a fizikai kímélet, gyulladáscsökkentő kezelése</li>
-      </ul>
+      <p>A rotátor köpeny a vállízület mozgatásáért felel. A felkarcsont fejét négy különböző izom köpenyszerűen veszi körbe. 
+        A válltáji fájdalmak egyik leggyakoribb oka ezen a területen történik. Masszív szakadásról akkor beszélünk, ha legalább 
+        2 ín teljesen sérül. A váll tompa fájdalma, főleg a külső részen érezhető. A beteg nem tudja felemelni a karját, a 
+        fájdalom fokozódik. </p>
+      <p>A rotátor köpeny varrhatatlan voltáról műtét közben bizonyosodunk meg. Amennyiben az anyagminőség és a visszahúzódás 
+        mértéke jelentős, akkor a fájdalomcsillapítás és a részleges varrat a cél. Az ilyen műtéteket minimál invazív Arthroscopos 
+        eljárással végezzük. 3-4 db kis lyukból érjük el a műtéti területet, mely 50-80 percet vesz igénybe. A masszív szakadást, 
+        ami sokszor U alakú megpróbáljuk méretében csökkenteni. </p>
+      <p>Műtéteinket előre megtervezzük, mellyel <strong>műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 
+        95 százalékra emelhető.</strong> </p>
+      <p>Műtét besorolása: 1 napos beavatkozás</p>
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vall-rotatorkopeny.jpg" alt="Arthroscopos rotátor köpeny varratműtét">
     </div>
     
     <div class="col-lg-6 img-thumbnail">
-      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-terd.jpg" alt="Csipőfájdalomról">
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgenvall-500.jpg" alt="Vállfájdalomról" sizes="80%">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
