--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-prozezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
-              <a class="dropdown-item" href="terd-porcsebészet.html">Térd porcsebészet</a>              
+              <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>              
             </div>
           </li>
         
@@ -184,7 +184,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <p><a href="izomatvagas-nelkul.html">
-            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgencsipo-300.jpg" alt="">
+            <img class="card-img-top card-zoom rounded-lg img-thumbnail" src="pictures/rontgencsipo-300.jpg" alt="">
           </a></p>   
           <div class="card-body">
             <h4 class="card-title">Minimál invazív csípőprotézis technológia</h4>
@@ -199,7 +199,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <p><a href="terd-protezis-beultetes.html">
-            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenterd-300.jpg" alt="">
+            <img class="card-img-top card-zoom rounded-lg img-thumbnail" src="pictures/rontgenterd-300.jpg" alt="">
           </a></p>   
           <div class="card-body">
             <h4 class="card-title">Térdprotézis egyénre szabva</h4>
@@ -213,7 +213,7 @@
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
           <p><a href="arthroscopos-vallsebeszet.html"> 
-            <img class="card-img-top rounded-lg img-thumbnail" src="pictures/rontgenvall-300.jpg" alt="">
+            <img class="card-img-top card-zoom rounded-lg img-thumbnail" src="pictures/rontgenvall-300.jpg" alt="">
           </a></p>    
           <div class="card-body">
             <h4 class="card-title">Arthroscopos vállsebészet</h4>
