--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -64,7 +64,7 @@
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
               <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
-              <a class="dropdown-item" href="terd-porcsebészet.html">Térd porcsebészet</a>              
+              <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>             
             </div>
           </li>
         
