Csak eg kis semmiség

--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -125,7 +125,7 @@
     </div>
 
     <div class="col-lg-6 img-thumbnail">
-      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-csipo.jpg" alt="Csipőfájdalomról">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
