--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
-
   <meta charset="utf-8">
+  <title>Csípőfájdalom okai és kezelésük</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Megbízható ortopéd sebészt keres Tolna megyében? Csípő, váll és térdsebészet a legújabb technológiával.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+
+  <link rel="canonical" href="https://www.drganczer.hu/csipofajdalomrol/" />
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
 
 
-  <!-- Bootstrap core CSS -->
+  <!-- Bootstrap core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -121,7 +119,10 @@
             <li>csípőízület veleszületett vagy fejlődési zavarai</li>
             <li>gyerekkori és serdülőkori combfej betegségek</li>
           </ul>
-        <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás esetén, ha a fent említettek nem hoznak javulást, akkor csípő protézis beültetése javasolt.</p>
+        <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő 
+	injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, 
+	fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás 
+	esetén, ha a fent említettek nem hoznak javulást, akkor <a href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
     </div>
 
     <div class="col-lg-6 img-thumbnail">
