--- a/izomatvagas-nelkul.html
+++ b/izomatvagas-nelkul.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
-
   <meta charset="utf-8">
+  <title>Izomátvágás nélküli csípőprotézis beültetés</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="A minimál invazív csípőportézis izomátvágás nélküli eljárás. Rövidebb kórházi tartózkodás, gyorsabb felépülési idő, kevesebb vérvesztés.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  
+  <link rel="canonical" href="https://www.drganczer.hu/izomatvagas-nelkul/" />
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
-
-
-  <!-- Bootstrap core CSS -->
+  
+  <!-- Bootstrap core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -38,12 +35,7 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Kezdőlap</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li> -->
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Csipő
@@ -109,7 +101,7 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <p><strong>ELÜLSŐ (ANTERIOR) FELTÁRÁS csípőprotézis műtét esetén</strong></p>        
+      <h2>ELÜLSŐ (ANTERIOR) FELTÁRÁS csípőprotézis műtét esetén</h2> 
       <p>Mi a minimál invazív csípőprotézis?</p>
       <p>Ennél az eljárásnál a protézis a lágyékhajlatban ejtett kis metszésen kerül beültetésre úgy, hogy a csípő körüli izmok érintetlenül maradnak. Az elülső csípőprotézis-műtét során az implantátum beültetése - a comb elülső részén - a fehérnemű vonalában ejtett kis metszésből az izmok közötti résen keresztül történik. Az izmot nem vágjuk el, csak széthúzzuk a protézis beültetéséhez. Ez egy valóba minimálisan invazív (minimális szöveti károsodással járó) műtéti megoldás, mivel a csípőt körülvevő izmok teljes megkímélésével jár. </p>
       <p>Számos előnye van:</p>
