--- a/arthroscopos-vallsebeszet.html
+++ b/arthroscopos-vallsebeszet.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="hu">
 <head>
-
   <meta charset="utf-8">
+  <title>Vállsebészetünkön végzett műtétek</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Vállsebészetünk a váll fájdalmaival, betegségeivel, vagy annak elváltozásaival foglalkozik. Az operációkat arthroscopos és minimál invazív eljárással végezzük el. 1 napos sebészet.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  
+  <link rel="canonical" href="https://www.drganczer.hu/arthroscopos-vallsebeszet/" />
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
-
-
-  <!-- Bootstrap core CSS -->
+  
+  <!-- Bootstrap core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -121,7 +119,7 @@
         <li>rotátorköpeny varratműtét</li>
         <li>rotátorköpeny szakadás></li>        
       </ul>
-      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk és megtervezzük műtéteinket. Így a beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra tudjuk tervezni.  </p>
+      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk és megtervezzük műtéteinket. Így a <strong>beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra </strong>tudjuk tervezni.  </p>
       <p>Amennyiben műtétet javasolunk, úgy az operációkat arthroscopos és minimál invazív eljárással végezzük el. Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük. A minimál invazív feltárásnak köszönhetően a szervezetet alig terhelve, végezzük el a beavatkozást, meggyorsítva ezzel a gyógyulás idejét. </p>
       <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vall-artoscope.jpg" alt="Arthroscopos vállsebészet ">
     </div>
