--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
-
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
-
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Dr. Ganczer Péter Ortopéd sebész</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="20 éve dolgozom szakterületemen mely elsősorban térd, csípő és vállsebészet. Célom, hogy a betegek gyógyulását megkönnyítsem és hosszú távon legyen eredményes a beavatkozás">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    
+    <link rel="canonical" href="https://www.drganczer.hu/bemutatkozas/" />
+    <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  
+    
+    <!-- Bootstrap core CSS  -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+  
+  </head>
 
 <body>
 
