--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="hu">
-
 <head>
-
   <meta charset="utf-8">
+  <title>Ortopédiai műtétk - Dr. Ganczer Péter ortopéd sebész</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Megbízható ortopéd sebészt keres Tolna megyében? Csípő, váll és térdsebészet a legújabb technológiával.">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  
+  <link rel="canonical" href="https://www.drganczer.hu/" />
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
-  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
-  <title>Dr. Ganczer Péter Ortopéd sebész</title>
-
+  
   <!-- Bootstrap core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
